# fastxai

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.bak  requirements-linux.txt  requirements-windows.txt
app/: .env  Dockerfile  Dockerfile2  config.py  main.py  main2.py  main3.py  main4.py  settings.py
app/api/v1/: ragas.py
app/api/v1/endpoints/: agents.py  auth.py  fastmcp.py  mfa.py  routers_api.py  routers_api7.py
app/core/: async_logger7.py  audit.py  audit_log.py  audit_middleware.py  audit_storage.py  auth.py  auth2.py  auth5.py  config.py  config5.py  config7.py  context.py  db5.py  dockerfile5  encryption.py  exceptions_handlers7.py  fastapi_user.py  fastmcp_cli.py  fastmcp_cli2.py  handlers.py  logger.py  logger5.py  logger7.py  logging.py  logging6.py  main5.py  main6.py  main7.py  metrics5.py  mfa.py  middleware2.py  middleware_logging7.py  middleware_tracing7.py  middlewares.py  monitoring.py  rate_limit.py  rbac.py  redis5.py  routers_api7.py  security.py  (+8 more)
app/database/: database.py  postgres.py  postgresql.conf  redis.py
app/dbs/: config.py  config2.py  database.py  databases2.py  engine.py  rdms_db.py  redis.py  settings2.py
app/llm/agents/: orchestrator.py
app/llm/ragas/: chain.py  evaluation.py  evaluation_worker.py
app/models/: audit.py  base.py  mfa_user.py  user.py
app/security/: api_keys.py  audit.py  auth.py  config.py  encryption.py  middleware.py  monitoring.py  rbac.py  validation.py
app/security2/: auth2.py  config2.py  data_protection.py  middleware2.py  rate_limit.py
app/services/: audit_mgr.py  audit_service.py  auth_service.py  base.py  mfa_service.py  user_mgr5.py  user_service.py  vector_service.py
app/utils/: download.py  graphiti.py  langagent.py  redis_client.py  vectors.py
app/web/: web_routes.py
app/web/templates/: base.html  data_provenance.html  data_provenance1.html  lineage.html  lineage2.html  lineage3.html
docs/: pg_hba.conf
docs/seatunnel/: indicator_data_value_gen.py  mysql_to_mysql_auto_gen_table.conf  mysql_to_mysql_batch_custom_sync.conf  mysql_to_mysql_batch_custom_time_sync.conf  mysql_to_mysql_batch_sync.conf  mysql_to_mysql_full_auto_update.conf  mysql_to_mysql_full_sync.conf  mysql_to_mysql_full_sync222.conf  mysql_to_mysql_streaming.conf  mysql_to_mysql_streaming_milti.conf  nocheckpoint.conf  seatunnel_85_407.conf
logs/: app-2025-12-09.err  app-2025-12-10.err
vector_storage/milvus/: docker-compose.yml
vector_storage/milvus/volumes/minio/.minio.sys/: format.json
